erreur de majuscule

--- a/diagramme des classes.tex
+++ b/diagramme des classes.tex
@@ -49,7 +49,7 @@
 
 \begin{class}[text width=7cm]{Deck}{0,-7}
 \attribute{cards : list of Card}
-\operation{Draw(number : int) -> list of Card}
+\operation{draw(number : int) -> list of Card}
 \end{class}
 
 \draw[dashed,-latex] (Deck) --node[right, midway]{utilise} (Card);
