--- a/diagramme des classes.tex
+++ b/diagramme des classes.tex
@@ -12,7 +12,6 @@
 
 \begin{tikzpicture}
 \begin{class}{Card}{0, 0}
-\attribute{image : str}
 \attribute{valeur : str}
 \operation{\_\_init\_\_(image : str)}
 \operation{priority() -> int}
@@ -24,7 +23,7 @@
 \operation{\_\_repr\_\_() -> str}
 \end{class}
 
-\begin{class}[text width=7cm]{CardList}{10,0}
+\begin{class}[text width=7cm]{CardList[list]}{10,0}
 \attribute{npi : list of Card or None}
 \operation{\_\_init\_\_(*args)}
 \operation{append(card : Card)}
@@ -34,7 +33,7 @@
 \operation{to\_npi() -> list of Card or None}
 \end{class}
 
-\draw[dashed,-latex] ({CardList}) -- node[below, midway]{utilise} (Card);
+\draw[dashed,-latex] ({CardList[list]}) -- node[below, midway]{utilise} (Card);
 
 \begin{class}[text width=9cm]{Proof}{10, -7}
 \attribute{premises : list of CardList}
@@ -46,18 +45,26 @@
 \operation{conclusion() -> None | list of (True|False|None)}
 \end{class}
 
-\draw[dashed,-latex] (Proof) --node[below, midway]{utilise} ({CardList});
+\draw[dashed,-latex] (Proof) --node[right, midway]{utilise} ({CardList[list]});
 
-\begin{class}[text width=7cm]{Deck}{0,-7}
-\attribute{cards : list of Card}
+\begin{class}[text width=7cm]{Deck[list]}{0,-7}
 \operation{draw(number : int) -> list of Card}
 \operation{append(card : Card)}
 \operation{reset()}
 \operation{is\_finished() -> boolean}
 \end{class}
 
-\draw[dashed,-latex] (Deck) --node[right, midway]{utilise} (Card);
+\draw[dashed,-latex] ({Deck[list]}) --node[right, midway]{utilise} (Card);
 
+\begin{class}{ErgoGui[Tk]}{0,-12}
+\attribute{proof : Proof}
+\attribute{deck : Deck}
+\operation{\_\_init\_\_()}
+\operation{\_\_init\_menu\_\_()}
+\end{class}
+
+\draw[dashed,-latex] (ErgoGui[Tk]) --node[right, midway]{utilise} ({Deck[list]});
+\draw[dashed,-latex] (ErgoGui[Tk]) --node[right, midway]{utilise} (Proof);
 \end{tikzpicture}
 
 
