Ajout d'un lien vers github au rapport

--- a/rapports/rapport.tex
+++ b/rapports/rapport.tex
@@ -62,7 +62,11 @@ Si on finit tout ça et qu'on a peur de s'ennuyer, on pourra toujours creuser po
 
 \subsection{Outils utilisés}
 
-Nous avons configuré un Rasberry Pi comme serveur pour installer redmine dessus, en nous aidant beaucoup du \href{http://juramaths.fr/redmine/projects/serveur-web-sur-un-raspberry-pi/wiki}{wiki} de Frédéric Muller (merci à lui) et des article de Linux Pratique mis à notre disposition par The Big Boss (loué soit-il). La documentation technique est générée avec Sphinx, encore grâce aux articles de GNU/Linux Magasine que notre Big Boss a eu la bonté de nous fournir (Il n'en sera jamais assez remercié \footnote{Le cirage de pompe peut-il augmenter significativement la note de ce module ?}).
+Nous avons configuré un Rasberry Pi comme serveur pour installer redmine dessus, en nous aidant beaucoup du \href{http://juramaths.fr/redmine/projects/serveur-web-sur-un-raspberry-pi/wiki}{wiki} de Frédéric Muller (merci à lui) et des article de Linux Pratique mis à notre disposition par The Big Boss (loué soit-il).
+
+Nous avons aussi créé un dépôt sur github : \url{https://github.com/isnpaulconstans/Ergo}
+
+La documentation technique est générée avec Sphinx, encore grâce aux articles de GNU/Linux Magasine que notre Big Boss a eu la bonté de nous fournir (Il n'en sera jamais assez remercié \footnote{Le cirage de pompe peut-il augmenter significativement la note de ce module ?}).
 
 Les résultats sont disponibles sur \url{http://paulconstans.ddns.info/redmine/projects/ergo} et sur \url{http://paulconstans.ddns.info/documentation/}.
 
